--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     }
   ],
   "require": {
-    "php": "^7.1|^8.0",
-    "illuminate/database": "~4.2|^5|^6|^7|^8",
-    "illuminate/config": "~4.2|^5|^6|^7|^8",
+    "php": "^8.0",
+    "illuminate/database": "~4.2|^5|^6|^7|^8|^9",
+    "illuminate/config": "~4.2|^5|^6|^7|^8|^9",
     "nesbot/carbon": "~1.0|~2",
     "elasticsearch/elasticsearch": "^7.0"
   },
