--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "illuminate/database": "~4.2|^5|^6|^7|^8|^9",
     "illuminate/config": "~4.2|^5|^6|^7|^8|^9",
     "nesbot/carbon": "~1.0|~2",
-    "elasticsearch/elasticsearch": "^7.0"
+    "elasticsearch/elasticsearch": "^7.0|^8.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.2|~5.0|~8.0",
