--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
   ],
   "require": {
     "php": "^8.0",
-    "illuminate/database": "~4.2|^5|^6|^7|^8|^9",
-    "illuminate/config": "~4.2|^5|^6|^7|^8|^9",
+    "illuminate/database": "~4.2|^5|^6|^7|^8|^9|^10",
+    "illuminate/config": "~4.2|^5|^6|^7|^8|^9|^10",
     "nesbot/carbon": "~1.0|~2",
     "elasticsearch/elasticsearch": "^7.0|^8.3"
   },
