--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
   ],
   "require": {
     "php": "^8.0",
-    "illuminate/database": "~4.2|^5|^6|^7|^8|^9|^10|^11",
-    "illuminate/config": "~4.2|^5|^6|^7|^8|^9|^10|^11",
-    "nesbot/carbon": "~1.0|~2",
+    "illuminate/database": "~4.2|^5|^6|^7|^8|^9|^10|^11|^12",
+    "illuminate/config": "~4.2|^5|^6|^7|^8|^9|^10|^11|^12",
+    "nesbot/carbon": "~1.0|~2|~3",
     "elasticsearch/elasticsearch": "^7.0|^8.3"
   },
   "require-dev": {
